--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,10 @@
 {
   "name": "@ndtao2020/deno-xxhash",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "tasks": {
-    "wasmbuild": "deno run -A jsr:@deno/wasmbuild@0.19.0",
+    "check": "deno run -A jsr:@deno/wasmbuild@0.19.0 --check",
+    "build": "deno run -A jsr:@deno/wasmbuild@0.19.0",
     "format": "deno fmt",
     "publish": "deno publish"
   },
